--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                        <a class="nav-link" href="about.html">About Me</a>
-                        <a class="nav-link" href="about.html#contact">Contact Me</a>
+                        <a class="nav-link active" aria-current="page" href="/" title="Homepage">Home</a>
+                        <a class="nav-link" href="/about.html" title="About Huey Teng Tay">About Me</a>
+                        <a class="nav-link" href="/about.html#contact" title="Connect with Huey Teng">Contact Me</a>
 
                     </div>
                 </div>
