--- a/about.html
+++ b/about.html
@@ -28,15 +28,15 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link" href="index.html">Home</a>
-                    <a class="nav-link active" aria-current="page" href="about.html">About Me</a>
-                    <a class="nav-link" href="about.html#contact">Contact Me</a>
+                    <a class="nav-link active" aria-current="page" href="about.html">About</a>
+                    <a class="nav-link" href="about.html#contact">Contact</a>
     
                 </div>
             </div>
         </div>
     </nav>
 
-    <h1>About me</h1>
+    <h1>About Me</h1>
     <h3>Front-end developer from Kamloops, Canada</h3>
     <div class="about-paragraphs">
         <p>
@@ -45,27 +45,24 @@
             alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
             blanditiis harum.
             <br />
-            <br />
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-            alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-            blanditiis harum.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-            alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-            blanditiis harum.
-            <br />
-            <br />
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-            alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-            blanditiis harum.
-        </p>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+                    </div>
+                    <div class="col-sm-4">
+                        <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+                    </div>
+                    <div class="col-sm-4">
+                        <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+                    </div>
+                </div>
+            </div>
     </div>
+    <br />
     <div id="contact">
-        <h2>📮 Contact me</h2>
+        <h2 class="contact-me">📮 Get in touch with me:</h2>
         <a href="mailto:hueyteng.tay@gmail.com" class="email-link">
             hueyteng.tay@gmail.com
         </a>
