--- a/about.html
+++ b/about.html
@@ -13,25 +13,29 @@
     <link rel="stylesheet" href="src/style.css" />
     <title>Huey Teng Tay | About Me </title>
 
-    <meta name="description" content="Get to know me: Huey Teng Tay - Copywriter and UX Enthusiast" />
+    <meta name="description" content="Huey Teng Tay is a copywriter and UX enthusiast based in Kamloops, Canada. Check out her work and connect with her for job opportunities" />
 </head>
 
 <body>
-    <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <a class="navbar-home" href="index.html">Huey Teng</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="/" title="Homepage">HT Tay</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link" href="index.html">Home</a>
-                    <a class="nav-link active" aria-current="page" href="about.html">About</a>
-                    <a class="nav-link" href="about.html#contact">Contact</a>
-    
-                </div>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/" title="Homepage">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/about.html" title="About Huey Teng Tay">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/about.html#contact" title="Contact Huey Teng Tay">Contact</a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
@@ -49,13 +53,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4">
-                        <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+                        <img src="images/yoga.png" alt="Yoga Project" class="img-fluid p-2 shadow rounded" />
                     </div>
                     <div class="col-sm-4">
-                        <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+                        <img src="images/weather.png" alt="Weather Project" class="img-fluid p-2 shadow rounded" />
                     </div>
                     <div class="col-sm-4">
-                        <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+                        <img src="images/yogurt.png" alt="Yogurt Project" class="img-fluid p-2 shadow rounded" />
                     </div>
                 </div>
             </div>
@@ -63,7 +67,7 @@
     <br />
     <div id="contact">
         <h2 class="contact-me">📮 Get in touch with me:</h2>
-        <a href="mailto:hueyteng.tay@gmail.com" class="email-link">
+        <a href="mailto:hueyteng.tay@gmail.com" class="email-link" title="Email Huey Teng Tay">
             hueyteng.tay@gmail.com
         </a>
     </div>
